--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ ENV_API_PORT=3000
 URI_MONGO=mongodb://localhost:27017/
 DB_MONGO=weather
 TABLE_MONGO=forecast-florianopolis
+ENV_CORS_ORIGEM=http://localhost:5173
+#ENV_CORS_ORIGEM=http://www.leandrohuber.com.br
